# MyEngine

./: .gitmodules  CMakeLists.txt
MyEngineCore/: CMakeLists.txt
MyEngineCore/include/MyEngineCore/: Application.hpp  Log.hpp
MyEngineCore/include/MyEngineCore/Utils/: test.hpp
MyEngineCore/src/MyEngineCore/: Application.cpp
MyEngineCore/src/MyEngineCore/Utils/: test.cpp
MyEngineEditor/: CMakeLists.txt
MyEngineEditor/src/: main.cpp
